j1939_tp/J1939_TP_CMParser.py
# Generated from J1939_TP_CM.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class J1939_TP_CMParser ( Parser ):

    grammarFileName = "J1939_TP_CM.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'10'", "'11'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "UINT8", "WS" ]

    RULE_tp_cm_rts = 0
    RULE_controlByte_rts = 1
    RULE_tp_cm_cts = 2
    RULE_controlByte_cts = 3
    RULE_totalMessageSize = 4
    RULE_totalNumPackets = 5
    RULE_maxPacketsPerCTS = 6
    RULE_numPackets = 7
    RULE_nextPacket = 8
    RULE_reserved = 9
    RULE_pgn = 10

    ruleNames =  [ "tp_cm_rts", "controlByte_rts", "tp_cm_cts", "controlByte_cts", 
                   "totalMessageSize", "totalNumPackets", "maxPacketsPerCTS", 
                   "numPackets", "nextPacket", "reserved", "pgn" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    UINT8=3
    WS=4

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Tp_cm_rtsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def controlByte_rts(self):
            return self.getTypedRuleContext(J1939_TP_CMParser.ControlByte_rtsContext,0)


        def totalMessageSize(self):
            return self.getTypedRuleContext(J1939_TP_CMParser.TotalMessageSizeContext,0)


        def totalNumPackets(self):
            return self.getTypedRuleContext(J1939_TP_CMParser.TotalNumPacketsContext,0)


        def maxPacketsPerCTS(self):
            return self.getTypedRuleContext(J1939_TP_CMParser.MaxPacketsPerCTSContext,0)


        def pgn(self):
            return self.getTypedRuleContext(J1939_TP_CMParser.PgnContext,0)


        def EOF(self):
            return self.getToken(J1939_TP_CMParser.EOF, 0)

        def getRuleIndex(self):
            return J1939_TP_CMParser.RULE_tp_cm_rts

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTp_cm_rts" ):
                listener.enterTp_cm_rts(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTp_cm_rts" ):
                listener.exitTp_cm_rts(self)




    def tp_cm_rts(self):

        localctx = J1939_TP_CMParser.Tp_cm_rtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_tp_cm_rts)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.controlByte_rts()
            self.state = 23
            self.totalMessageSize()
            self.state = 24
            self.totalNumPackets()
            self.state = 25
            self.maxPacketsPerCTS()
            self.state = 26
            self.pgn()
            self.state = 27
            self.match(J1939_TP_CMParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ControlByte_rtsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return J1939_TP_CMParser.RULE_controlByte_rts

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterControlByte_rts" ):
                listener.enterControlByte_rts(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitControlByte_rts" ):
                listener.exitControlByte_rts(self)




    def controlByte_rts(self):

        localctx = J1939_TP_CMParser.ControlByte_rtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_controlByte_rts)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self.match(J1939_TP_CMParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tp_cm_ctsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def controlByte_cts(self):
            return self.getTypedRuleContext(J1939_TP_CMParser.ControlByte_ctsContext,0)


        def numPackets(self):
            return self.getTypedRuleContext(J1939_TP_CMParser.NumPacketsContext,0)


        def nextPacket(self):
            return self.getTypedRuleContext(J1939_TP_CMParser.NextPacketContext,0)


        def reserved(self):
            return self.getTypedRuleContext(J1939_TP_CMParser.ReservedContext,0)


        def pgn(self):
            return self.getTypedRuleContext(J1939_TP_CMParser.PgnContext,0)


        def EOF(self):
            return self.getToken(J1939_TP_CMParser.EOF, 0)

        def getRuleIndex(self):
            return J1939_TP_CMParser.RULE_tp_cm_cts

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTp_cm_cts" ):
                listener.enterTp_cm_cts(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTp_cm_cts" ):
                listener.exitTp_cm_cts(self)




    def tp_cm_cts(self):

        localctx = J1939_TP_CMParser.Tp_cm_ctsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tp_cm_cts)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.controlByte_cts()
            self.state = 32
            self.numPackets()
            self.state = 33
            self.nextPacket()
            self.state = 34
            self.reserved()
            self.state = 35
            self.pgn()
            self.state = 36
            self.match(J1939_TP_CMParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ControlByte_ctsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return J1939_TP_CMParser.RULE_controlByte_cts

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterControlByte_cts" ):
                listener.enterControlByte_cts(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitControlByte_cts" ):
                listener.exitControlByte_cts(self)




    def controlByte_cts(self):

        localctx = J1939_TP_CMParser.ControlByte_ctsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_controlByte_cts)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(J1939_TP_CMParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TotalMessageSizeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UINT8(self, i:int=None):
            if i is None:
                return self.getTokens(J1939_TP_CMParser.UINT8)
            else:
                return self.getToken(J1939_TP_CMParser.UINT8, i)

        def getRuleIndex(self):
            return J1939_TP_CMParser.RULE_totalMessageSize

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTotalMessageSize" ):
                listener.enterTotalMessageSize(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTotalMessageSize" ):
                listener.exitTotalMessageSize(self)




    def totalMessageSize(self):

        localctx = J1939_TP_CMParser.TotalMessageSizeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_totalMessageSize)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(J1939_TP_CMParser.UINT8)
            self.state = 41
            self.match(J1939_TP_CMParser.UINT8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TotalNumPacketsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UINT8(self):
            return self.getToken(J1939_TP_CMParser.UINT8, 0)

        def getRuleIndex(self):
            return J1939_TP_CMParser.RULE_totalNumPackets

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTotalNumPackets" ):
                listener.enterTotalNumPackets(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTotalNumPackets" ):
                listener.exitTotalNumPackets(self)




    def totalNumPackets(self):

        localctx = J1939_TP_CMParser.TotalNumPacketsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_totalNumPackets)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(J1939_TP_CMParser.UINT8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MaxPacketsPerCTSContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UINT8(self):
            return self.getToken(J1939_TP_CMParser.UINT8, 0)

        def getRuleIndex(self):
            return J1939_TP_CMParser.RULE_maxPacketsPerCTS

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMaxPacketsPerCTS" ):
                listener.enterMaxPacketsPerCTS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMaxPacketsPerCTS" ):
                listener.exitMaxPacketsPerCTS(self)




    def maxPacketsPerCTS(self):

        localctx = J1939_TP_CMParser.MaxPacketsPerCTSContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_maxPacketsPerCTS)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(J1939_TP_CMParser.UINT8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumPacketsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UINT8(self):
            return self.getToken(J1939_TP_CMParser.UINT8, 0)

        def getRuleIndex(self):
            return J1939_TP_CMParser.RULE_numPackets

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumPackets" ):
                listener.enterNumPackets(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumPackets" ):
                listener.exitNumPackets(self)




    def numPackets(self):

        localctx = J1939_TP_CMParser.NumPacketsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_numPackets)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(J1939_TP_CMParser.UINT8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NextPacketContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UINT8(self):
            return self.getToken(J1939_TP_CMParser.UINT8, 0)

        def getRuleIndex(self):
            return J1939_TP_CMParser.RULE_nextPacket

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNextPacket" ):
                listener.enterNextPacket(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNextPacket" ):
                listener.exitNextPacket(self)




    def nextPacket(self):

        localctx = J1939_TP_CMParser.NextPacketContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_nextPacket)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(J1939_TP_CMParser.UINT8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReservedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UINT8(self, i:int=None):
            if i is None:
                return self.getTokens(J1939_TP_CMParser.UINT8)
            else:
                return self.getToken(J1939_TP_CMParser.UINT8, i)

        def getRuleIndex(self):
            return J1939_TP_CMParser.RULE_reserved

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReserved" ):
                listener.enterReserved(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReserved" ):
                listener.exitReserved(self)




    def reserved(self):

        localctx = J1939_TP_CMParser.ReservedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_reserved)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(J1939_TP_CMParser.UINT8)
            self.state = 52
            self.match(J1939_TP_CMParser.UINT8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PgnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UINT8(self, i:int=None):
            if i is None:
                return self.getTokens(J1939_TP_CMParser.UINT8)
            else:
                return self.getToken(J1939_TP_CMParser.UINT8, i)

        def getRuleIndex(self):
            return J1939_TP_CMParser.RULE_pgn

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPgn" ):
                listener.enterPgn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPgn" ):
                listener.exitPgn(self)




    def pgn(self):

        localctx = J1939_TP_CMParser.PgnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_pgn)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(J1939_TP_CMParser.UINT8)
            self.state = 55
            self.match(J1939_TP_CMParser.UINT8)
            self.state = 56
            self.match(J1939_TP_CMParser.UINT8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





